--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bioaktuell Film - Titel</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
@@ -21,7 +22,7 @@
 
     <section id="trailer">
         <h2>Trailer</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
     <section id="links">
