Updated movie info

--- a/index.html
+++ b/index.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bioaktuell Film - Titel</title>
+    <title>Bioaktuell Film - Gladiator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-    <img src="logo.jpg" alt="Filmens titel logotyp">
+    <img src="gladiator.jpg" alt="Gladiator">
 </header>
 
 <main>
     <section id="information">
-        <h1>Filmtitel</h1>
-        <p>Premiär: 15 november 2024</p>
-        <p>Regi: Jane Doe</p>
-        <p>Skådespelare: John Smith, Emma Johnson, Michael Brown</p>
-        <p>Kort beskrivning: En spännande berättelse om äventyr och vänskap i en fantastisk värld.</p>
+        <h1>Gladiator</h1>
+        <p>Premiär: 1 Maj 2000</p>
+        <p>Regi: Ridley Scott</p>
+        <p>Skådespelare: Russel Crowe, Joaquin Phoenix, Connie Nielsen</p>
+        <p>Beskrivning: Tvingad in i slaveriet av en korrupt, incestuös arvinge till tronen, blir den romerske generalen Maximus en gladiator. Hans skicklighet i arenan för honom slutligen till Rom, Colosseum och en hämdlysten kraftmätning med den nye kejsaren.</p>
     </section>
 
     <section id="trailer">
         <h2>Trailer</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/P5ieIbInFpg" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </section>
 
     <section id="links">
-        <h2>Viktiga länkar</h2>
+        <h2>Länkar</h2>
         <ul>
             <li><a href="#">Officiell hemsida</a></li>
-            <li><a href="#">Boka biljetter</a></li>
-            <li><a href="#">Filmrecensioner</a></li>
+            <li><a href="https://www.filmstaden.se/film/gladiator-klassiker/">Boka biljetter</a></li>
+            <li><a href="https://www.rottentomatoes.com/m/gladiator">Filmrecensioner</a></li>
         </ul>
     </section>
 </main>
