Updated movie info

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bioaktuell Film - Gladiator</title>
+    <title>Filmbolaget FS - Gladiator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <header>
-    <img src="gladiator.jpg" alt="Gladiator">
+    <img src="gladiator.png" alt="Gladiator">
 </header>
 
 <main>
@@ -28,7 +28,7 @@
     <section id="links">
         <h2>Länkar</h2>
         <ul>
-            <li><a href="#">Officiell hemsida</a></li>
+            <li><a href="https://www.filmstaden.se/">Officiell hemsida</a></li>
             <li><a href="https://www.filmstaden.se/film/gladiator-klassiker/">Boka biljetter</a></li>
             <li><a href="https://www.rottentomatoes.com/m/gladiator">Filmrecensioner</a></li>
         </ul>
