Updated the information box

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <main>
     <section id="information">
         <h1>Gladiator</h1>
-        <p>Premiär: 1 Maj 2000</p>
-        <p>Regi: Ridley Scott</p>
-        <p>Skådespelare: Russel Crowe, Joaquin Phoenix, Connie Nielsen</p>
-        <p>Beskrivning: Tvingad in i slaveriet av en korrupt, incestuös arvinge till tronen, blir den romerske generalen Maximus en gladiator. Hans skicklighet i arenan för honom slutligen till Rom, Colosseum och en hämdlysten kraftmätning med den nye kejsaren.</p>
+        <p><strong>Premiär:</strong> 1 Maj 2000</p>
+        <p><strong>Regi:</strong> Ridley Scott</p>
+        <p><strong>Skådespelare:</strong> Russel Crowe, Joaquin Phoenix, Connie Nielsen</p>
+        <p><strong>Beskrivning:</strong> Tvingad in i slaveriet av en korrupt, incestuös arvinge till tronen, blir den romerske generalen Maximus en gladiator. Hans skicklighet i arenan för honom slutligen till Rom, Colosseum och en hämdlysten kraftmätning med den nye kejsaren.</p>
     </section>
 
     <section id="trailer">
