Buttons open links in new tab

--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
     <section id="links">
         <h2>Länkar</h2>
         <ul>
-            <li><a href="https://www.filmstaden.se/">Officiell hemsida</a></li>
-            <li><a href="https://www.filmstaden.se/film/gladiator-klassiker/">Boka biljetter</a></li>
-            <li><a href="https://www.rottentomatoes.com/m/gladiator">Filmrecensioner</a></li>
+            <li><a href="https://www.filmstaden.se/"
+                   target="_blank"
+                   rel="noopener noreferrer">Officiell hemsida</a></li>
+            <li><a href="https://www.filmstaden.se/film/gladiator-klassiker/"
+                   target="_blank"
+                   rel="noopener noreferrer">Boka biljetter</a></li>
+            <li><a href="https://www.rottentomatoes.com/m/gladiator"
+                   target="_blank"
+                   rel="noopener noreferrer">Filmrecensioner</a></li>
         </ul>
     </section>
 </main>
