Replaced a link with Wikipedia

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <section id="links">
         <h2>Länkar</h2>
         <ul>
-            <li><a href="https://www.filmstaden.se/"
+            <li><a href="https://en.wikipedia.org/wiki/Gladiator_(2000_film)"
                    target="_blank"
-                   rel="noopener noreferrer">Officiell hemsida</a></li>
+                   rel="noopener noreferrer">Wikipedia</a></li>
             <li><a href="https://www.filmstaden.se/film/gladiator-klassiker/"
                    target="_blank"
                    rel="noopener noreferrer">Boka biljetter</a></li>
