Updated movie description

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p><strong>Premiär:</strong> 1 Maj 2000</p>
         <p><strong>Regi:</strong> Ridley Scott</p>
         <p><strong>Skådespelare:</strong> Russel Crowe, Joaquin Phoenix, Connie Nielsen</p>
-        <p><strong>Beskrivning:</strong> Tvingad in i slaveriet av en korrupt, incestuös arvinge till tronen, blir den romerske generalen Maximus en gladiator. Hans skicklighet i arenan för honom slutligen till Rom, Colosseum och en hämdlysten kraftmätning med den nye kejsaren.</p>
+        <p><strong>Beskrivning:</strong> Den romerske generalen Maximus Decimus Meridius får veta att kejsar Marcus Aurelius vill ha honom som sin efterträdare. Kejsarens son Commodus vill ärva tronen och för att nå sitt mål dödar han sin far och sänder sedan bud att Maximus med familj skall dödas. Maximus undkommer, men när han lyckas ta sig till sin familjs gård hittar han sin familj död. Maximus chockas svårt och flyr och hittas utsvulten och sårad av en slavhandlare som tar med honom. Den forne generalen blir nu tvungen att slåss som gladiator. Han blir snabbt känd som en stark och skicklig slagskämpe, men hans kamp går ut på att en dag få hämnas sin familj.</p>
     </section>
 
     <section id="trailer">
