Changed header logo to link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <img src="gladiator.png" alt="Gladiator">
+    <img src="https://images.fineartamerica.com/images-medium-5/gladiator-logo-transparent.png" alt="Gladiator">
 </header>
 
 <main>
